--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/default.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>  
 
+  <!-- <script src="https://github.com/riversun/xml-beautify/blob/master/dist/XmlBeautify.js"></script> -->
+
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
